# sourmash

./: .pre-commit-config.yaml  MANIFEST.in  Makefile  nix.shell  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: asv.yml
include/: sourmash.h
sourmash/: nodegraph.py  sbt.py  sbtmh.py
src/core/: Cargo.toml
src/core/src/: cmd.rs  signature.rs  wasm.rs
src/core/src/ffi/: minhash.rs  nodegraph.rs  signature.rs
src/core/src/index/: bigsi.rs  mod.rs
src/core/src/index/sbt/: mhbt.rs  mhmt.rs  mod.rs
src/core/src/sketch/: minhash.rs  mod.rs  nodegraph.rs
src/core/tests/: minhash.rs
tests/: conftest.py  test_cmd_signature.py  test_deprecated.py  test_index.py  test_lca.py  test_sbt.py  test_signature.py  test_sourmash.py  test_sourmash_compute.py
