[metadata]
name = sourmash
description = tools for comparing DNA sequences with MinHash sketches
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/dib-lab/sourmash
author = C. Titus Brown
author_email = titus@idyll.org
license = BSD 3-clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Rust
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls = 
    Documentation = https://sourmash.readthedocs.io
    CI = https://travis-ci.com/dib-lab/sourmash
    Source = https://github.com/dib-lab/sourmash
    Tracker = https://github.com/dib-lab/sourmash/issues

[options]
zip_safe = False
platforms = any
packages = find:
#package_dir =
#    =src
include_package_data = True
install_requires =
    screed>=0.9
    cffi>=1.14.0
    numpy
    enum34; python_version < "3.4"
    matplotlib
    scipy
    deprecation>=2.0.6
python_requires = >=3.5

[options.packages.find]
#where = src
exclude =
    tests
    benchmarks

[bdist_wheel]
universal = 1

# for explanation of %(extra)s syntax see:
# https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
# this syntax may change in the future
[options.extras_require]
test =
    pytest>=6
    pytest-cov
    recommonmark
    hypothesis
demo =
    jupyter
    jupyter_client
    ipython
doc =
    sphinx
    myst-parser[sphinx]
    alabaster
    sphinxcontrib-napoleon
    nbsphinx
    ipython
10x =
    bam2fasta==1.0.4
storage =
    ipfshttpclient>=0.4.13
    redis
all = 
    %(test)s
    %(demo)s
    %(doc)s
    %(10x)s
    %(storage)s

[options.entry_points]
console_scripts =
    sourmash = sourmash.__main__:main

[tool:pytest]
addopts =
    --doctest-glob='doc/*.md'
norecursedirs =
    utils
    build
    buildenv
    .tox
    .asv
    .eggs
python_files =
    sourmash/*.py
    tests/*.py
testpaths =
    tests
    doc
